# Website-datalogger

./: .replit  LICENSE  README.md  main.py  prova.py  pyproject.toml  replit.nix
templates/: grafica_python.html  home.html  prova.html
