[tool.poetry]
name = "repl_nix_Website-datalogger"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
numpy = "^1.24.2"
pandas = "^1.5.3"
requests = "^2.28.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
plotly = "^5.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
